# bruce

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env
.github/workflows/: docker-publish.yml
root/etc/cont-init.d/: 30-config
root/etc/services.d/bruce/: run
src/: bot.rs  bruce.rs  config.rs  cookie_database.rs  main.rs  membership.rs  scraper.rs
