[package]
name = "bruce"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bruce"
path = "src/bruce.rs"

[[bin]]
name = "scraper"
path = "src/scraper.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
config = "0.13"
tokio = {version = "1.19", features = ["rt-multi-thread"]}
tokio_schedule = "0.3"
poise = "0.2"
rusqlite = { version = "0.27", features = []}
dotenv = "0.15"
reqwest = {version = "0.11", features = ["cookies"]}
scraper = "0.13"
fallible-iterator = "0.2"
