[package]
name = "bruce"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bruce"

[dependencies]
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
tokio = {version = "1.19", features = ["rt-multi-thread"]}
tokio_schedule = "0.3"
rusqlite = { version = "0.27"}
reqwest = {version = "0.11", features = ["cookies"]}
poise = "0.2"
scraper = "0.13"
fallible-iterator = "0.2"
